gl33-master/src/test/deca/context/valid/others/affectation_int_int.deca
// Valid test
// Affectation d'un int à un int

{
   int x = 1;
   int y = 2;

   x = y;
   y = x;
}
