gl33-master/src/test/deca/context/invalid/other/affectation_string_int.deca
// Invalid test
// Affectation d'un string à un int

{
   String s;
   int n;

   n = s;
   n = "non";
}
